--- a/delivery-area.html
+++ b/delivery-area.html
@@ -62,7 +62,7 @@
 					</ul>
 				</div>
 				<div class="header-basket">
-					<span>999 Руб.</span>
+					<span><b>999</b> Руб.</span>
 					<a href="#">Корзина</a>
 				</div>
 			</div>
