--- a/order-1.html
+++ b/order-1.html
@@ -62,7 +62,7 @@
 					</ul>
 				</div>
 				<div class="header-basket">
-					<span>999 Руб.</span>
+					<span><b>999</b> Руб.</span>
 					<a href="#">Корзина</a>
 				</div>
 			</div>
@@ -106,7 +106,7 @@
 			</div>
 			<div class="title">Ваш заказ</div>
 			<ul class="order-list">
-				<li>
+				<!--<li>
 					<div class="left-part">
 						<div class="name">Пицца «4 сыра»</div>
 						<div class="dop"><div class="dop-del"></div>Сыр Чеддер</div>
@@ -120,44 +120,64 @@
 						<div class="more"></div>
 					</div>
 					<div class="price">2999 Руб.</div>
-				</li>
+				</li>-->
 			</ul>
 			<div class="dobavki-title">Добавить соусы:</div>
 			<ul class="dobavki-list">
-				<li>
+				<li id="souce-01">
 					<div class="image"><img src="i/dob-1.jpg"></div>
 					<div class="dobavki-name">Сырный соус</div>
 					<div class="dobavki-info">50 грамм</div>
+					<div class="dop-col">
+						<div class="dop-less"></div>
+						<p>0</p>
+						<div class="dop-more"></div>
+					</div>
 					<div class="price-wrap">
 						<div class="price"><span>21</span> Руб.</div>
-						<a href="#" class="dobavki-add"></a>
+						<a href="#souce-01" class="dobavki-add"></a>
 					</div>
 				</li>
-				<li>
+				<li id="souce-02">
 					<div class="image"><img src="i/dob-2.jpg"></div>
 					<div class="dobavki-name">Соус барбекю</div>
 					<div class="dobavki-info">10 грамм</div>
+					<div class="dop-col">
+						<div class="dop-less"></div>
+						<p>0</p>
+						<div class="dop-more"></div>
+					</div>
 					<div class="price-wrap">
 						<div class="price"><span>66</span> Руб.</div>
-						<a href="#" class="dobavki-add"></a>
+						<a href="#souce-02" class="dobavki-add"></a>
 					</div>
 				</li>
-				<li>
+				<li id="souce-03">
 					<div class="image"><img src="i/dob-3.jpg"></div>
 					<div class="dobavki-name">Соус из трав</div>
 					<div class="dobavki-info">20 грамм</div>
+					<div class="dop-col">
+						<div class="dop-less"></div>
+						<p>0</p>
+						<div class="dop-more"></div>
+					</div>
 					<div class="price-wrap">
 						<div class="price"><span>44</span> Руб.</div>
-						<a href="#" class="dobavki-add"></a>
+						<a href="#souce-03" class="dobavki-add"></a>
 					</div>
 				</li>
-				<li>
+				<li id="souce-04">
 					<div class="image"><img src="i/dob-4.jpg"></div>
 					<div class="dobavki-name">Сырный соус</div>
 					<div class="dobavki-info">50 грамм</div>
+					<div class="dop-col">
+						<div class="dop-less"></div>
+						<p>0</p>
+						<div class="dop-more"></div>
+					</div>
 					<div class="price-wrap">
 						<div class="price"><span>21</span> Руб.</div>
-						<a href="#" class="dobavki-add"></a>
+						<a href="#souce-04" class="dobavki-add"></a>
 					</div>
 				</li>
 			</ul>
