--- a/order-2.html
+++ b/order-2.html
@@ -62,7 +62,7 @@
 					</ul>
 				</div>
 				<div class="header-basket">
-					<span>999 Руб.</span>
+					<span><b>999</b> Руб.</span>
 					<a href="#">Корзина</a>
 				</div>
 			</div>
@@ -106,10 +106,10 @@
 				<div class="order-item item-info">
 					<div class="title">Ваш заказ</div>
 					<ul class="order-list">
-						<li>
+						<!--<li>
 							<p>Пицца «4 сыра»</p>
 							<div class="price"><span>2999</span> руб.</div>
-						</li>
+						</li>-->
 					</ul>
 					<div class="sum-wrap">
 						<p>Сумма заказа</p>
