--- a/thanks.html
+++ b/thanks.html
@@ -13,14 +13,14 @@
 	<link rel="stylesheet" href="css/jquery.fancybox.css" type="text/css">
 	<link rel="stylesheet" href="css/slick.css" type="text/css">
 	<link rel="stylesheet" href="css/layout.css" type="text/css">
-	<link rel="stylesheet" href="css/contacts.css" type="text/css">
+	<link rel="stylesheet" href="css/thanks.css" type="text/css">
 
 	<script type="text/javascript" src="js/jquery-2.1.1.min.js"></script>
 	<script type="text/javascript" src="js/jquery.fancybox.js"></script>
 	<script type="text/javascript" src="js/jquery.inputmask.bundle.js"></script>
 	<script type="text/javascript" src="js/slick.js"></script>
 	<script type="text/javascript" src="js/main.js"></script>
-	<script type="text/javascript" src="js/contacts.js"></script>
+	<script type="text/javascript" src="js/thanks.js"></script>
 
 </head>
 <body>
@@ -36,6 +36,13 @@
 					<p><a href="tel: 84950000000">8 (495) 000 00 00</a><br>телефон доставки</p>
 					<p><span>с 9:00 до 22:00</span><br>ежедневно</p>
 					<a href="#" class="header-btn">Личный кабинет</a>
+				</div>
+				<div class="header-top-order">
+					<ul>
+						<li>1.Подтверждение</li>
+						<li class="active">2.Оформление</li>
+						<li>3.Заказ готовится!</li>
+					</ul>
 				</div>
 			</div>
 			<div class="header-bottom clearfix">
@@ -90,60 +97,14 @@
 
 	<div class="b b-1">
 		<div class="b-block">
-			<h1>контакты</h1>
-			<div class="info">
-				<div class="info-name">Доставка</div>
-				<ul class="info-list">
-					<li>
-						<div class="name">Телефон:</div>
-						<p><a href="tel:+79000000000">8 (900) 000 00 00</a></p>
-					</li>
-					<li>
-						<div class="name">Режим работы:</div>
-						<p>Пн-Пт с 9:00 до 24:00<br>Сб-Вс с 10:00 до 24:00</p>
-					</li>
-				</ul>
-			</div>
-			<div class="info">
-				<div class="info-name">ул. Тверская, 7</div>
-				<ul class="info-list">
-					<li>
-						<div class="name">Телефон:</div>
-						<p><a href="tel: +79000000000">8 (900) 000 00 00</a></p>
-					</li>
-					<li>
-						<div class="name">Режим работы:</div>
-						<p>Пн-Пт с 9:00 до 24:00<br>Сб-Вс с 10:00 до 24:00</p>
-					</li>
-					<li>
-						<div class="name">Станция метро:</div>
-						<p>Тверская</p>
-					</li>
-				</ul>
-			</div>
-			<div class="info">
-				<div class="info-name">Сотрудничество</div>
-				<ul class="info-list">
-					<li>
-						<div class="name">Отдел маркетинга:</div>
-						<p><a href="tel:+79000000000">8 (900) 000 00 00</a><br><a href="mailto:marketing@tmt.ru">marketing@tmt.ru</a></p>
-					</li>
-					<li>
-						<div class="name">HR-отдел:</div>
-						<p><a href="tel:+79000000000">8 (900) 000 00 00</a><br><a href="mailto:marketing@tmt.ru">marketing@tmt.ru</a></p>
-					</li>
-					<li>
-						<div class="name">Отдел закупок:</div>
-						<p><a href="tel:+79000000000">8 (900) 000 00 00</a><br><a href="mailto:marketing@tmt.ru">marketing@tmt.ru</a></p>
-					</li>
-					<li>
-						<div class="name">Отдел маркетинга:</div>
-						<p><a href="tel:+79000000000">8 (900) 000 00 00</a><br><a href="mailto:marketing@tmt.ru">marketing@tmt.ru</a></p>
-					</li>
-				</ul>
-			</div>
-			<div class="map">
-				<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2244.9810852302753!2d37.609572915563994!3d55.75883078055499!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54a456ffd9027%3A0xaccb2fe99839b629!2z0KLQstC10YDRgdC60LDRjyDRg9C7LiwgNywg0JzQvtGB0LrQstCwLCAxMjUwMDk!5e0!3m2!1sru!2sru!4v1549437877868" frameborder="0" style="border:0" allowfullscreen></iframe>
+			<div class="b-1-wrap">
+				<div class="b-1-item">
+					<img src="i/thanks-img.jpg">
+				</div>
+				<div class="b-1-item">
+					<h1>Благодарим за<br>оставленную заявку</h1>
+					<p>В ближайшее время с вами свяжется наш менеджер для подтверждения заказа</p>
+				</div>
 			</div>
 		</div>
 	</div>
