--- a/pizzaria.html
+++ b/pizzaria.html
@@ -55,7 +55,7 @@
 					</ul>
 				</div>
 				<div class="header-basket">
-					<span>999 Руб.</span>
+					<span><b>999</b> Руб.</span>
 					<a href="#">Корзина</a>
 				</div>
 			</div>
