--- a/akcii.html
+++ b/akcii.html
@@ -49,7 +49,7 @@
 						<li><a href="#desert" class="scroll-btn">Десерты</a></li>
 						<li><a href="#water" class="scroll-btn">Напитки</a></li>
 						<li><a href="#wine" class="scroll-btn">Вина</a></li>
-						<li><a href="#">Новости</a></li>
+						<li><a href="akcii.html">Акции</a></li>
 						<li><a href="pizzaria.html">Пиццерия</a></li>
 						<li><a href="#">Контакты</a></li>
 					</ul>
@@ -74,7 +74,7 @@
 						<li><a href="#desert" class="scroll-btn">Десерты</a></li>
 						<li><a href="#water" class="scroll-btn">Напитки</a></li>
 						<li><a href="#wine" class="scroll-btn">Вина</a></li>
-						<li><a href="#">Новости</a></li>
+						<li><a href="#">Акции</a></li>
 						<li><a href="#">Пиццерия</a></li>
 						<li><a href="#">Контакты</a></li>
 					</ul>
