--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 						<li><a href="#desert" class="scroll-btn">Десерты</a></li>
 						<li><a href="#water" class="scroll-btn">Напитки</a></li>
 						<li><a href="#wine" class="scroll-btn">Вина</a></li>
-						<li><a href="#">Новости</a></li>
+						<li><a href="akcii.html">Акции</a></li>
 						<li><a href="pizzaria.html">Пиццерия</a></li>
 						<li><a href="contacts.html">Контакты</a></li>
 					</ul>
@@ -81,7 +81,7 @@
 						<li><a href="#desert" class="scroll-btn">Десерты</a></li>
 						<li><a href="#water" class="scroll-btn">Напитки</a></li>
 						<li><a href="#wine" class="scroll-btn">Вина</a></li>
-						<li><a href="#">Новости</a></li>
+						<li><a href="akcii.html">Акции</a></li>
 						<li><a href="pizzaria.html">Пиццерия</a></li>
 						<li><a href="contacts.html">Контакты</a></li>
 					</ul>
