--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@
 			<h2>Пицца</h2>
 			<ul class="b-3-list">
 				<li><span><img src="i/i-b-3-i-1.png">Тонкое итальянское тесто</span></li>
+				<li><span><img src="i/i-b-3-i-1.png">Тонкое итальянское тесто</span></li>
 				<li><span><img src="i/i-b-3-i-2.png">Ручная работа</span></li>
 				<li><span><img src="i/i-b-3-i-3.png">Свежие ингредиенты</span></li>
 			</ul>
