--- a/lk-reg.html
+++ b/lk-reg.html
@@ -113,8 +113,8 @@
 					</form>
 				</div>
 				<ul class="info-list">
-					<li><img src="i/vhod-img-1.png">Экономьте с нашей<br><span>Бонусной программой</span></li>
-					<li><img src="i/vhod-img-2.png">После первого заказа<br><span>Запомним ваш адрес</span></li>
+					<li><img src="i/vhod-img-1.png">Экономьте с нашей<br><span>Бонусной программой</span><a href="#" class="more-i fancybox"><img src="i/more-icon.png"></a></li>
+					<li><img src="i/vhod-img-2.png">После первого заказа<br><span>Запомним ваш адрес</span><a href="#" class="more-i fancybox"><img src="i/more-icon.png"></a></li>
 				</ul>
 			</div>
 		</div>
