--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 						<p>Ассорти из четырех видов сыра: Моцарелла, Чеддер, Дор-блю, Пармезан, орегано, базилик, соус.</p>
 						<a href="#popup-pizza-a" class="more-i fancybox-a"><img src="i/more-icon.png"></a>
 					</div>
-					<div class="add-ingr">Добавить ингредиенты</div>
+					<div class="add-ingr"><a href="#popup-pizza-a" class="fancybox-a">Добавить ингредиенты</a></div>
 					<div class="col">
 						<div class="less"></div>
 						<p>0</p>
@@ -155,7 +155,7 @@
 						<p>Ассорти из четырех видов сыра: Моцарелла, Чеддер, Дор-блю, Пармезан, орегано, базилик, соус.</p>
 						<a href="#popup-pizza-a" class="more-i fancybox-a"><img src="i/more-icon.png"></a>
 					</div>
-					<div class="add-ingr">Добавить ингредиенты</div>
+					<div class="add-ingr"><a href="#popup-pizza-a" class="fancybox-a">Добавить ингредиенты</a></div>
 					<div class="col">
 						<div class="less"></div>
 						<p>0</p>
@@ -173,7 +173,7 @@
 						<p>Ассорти из четырех видов сыра: Моцарелла, Чеддер, Дор-блю, Пармезан, орегано, базилик, соус.</p>
 						<a href="#popup-pizza-a" class="more-i fancybox-a"><img src="i/more-icon.png"></a>
 					</div>
-					<div class="add-ingr">Добавить ингредиенты</div>
+					<div class="add-ingr"><a href="#popup-pizza-a" class="fancybox-a">Добавить ингредиенты</a></div>
 					<div class="col">
 						<div class="less"></div>
 						<p>0</p>
@@ -191,7 +191,7 @@
 						<p>Ассорти из четырех видов сыра: Моцарелла, Чеддер, Дор-блю, Пармезан, орегано, базилик, соус.</p>
 						<a href="#popup-pizza-a" class="more-i fancybox-a"><img src="i/more-icon.png"></a>
 					</div>
-					<div class="add-ingr">Добавить ингредиенты</div>
+					<div class="add-ingr"><a href="#popup-pizza-a" class="fancybox-a">Добавить ингредиенты</a></div>
 					<div class="col">
 						<div class="less"></div>
 						<p>0</p>
