--- a/pizzaria.html
+++ b/pizzaria.html
@@ -99,21 +99,21 @@
 	<div class="b b-2">
 		<div class="b-block">
 			<ul class="filter">
-				<li class="active">ул. Тверская, 7</li>
-				<li>ул. Тверская, 8</li>
-				<li>ул. Тверская, 9</li>
-				<li>ул. Тверская, 11</li>
+				<li class="active" data-text="г. Москва, ул. Вавилова, 64/1, стр. 1, Черёмушкинский рынок" data-check="800 рублей" data-metro="Профсоюзная<br>Университет" data-time="с 9:00 до 24:00">ул. Тверская, 7</li>
+				<li data-text="г. Москва, ул. Тверская, 8" data-check="700 рублей" data-metro="Профсоюзная" data-time="с 9:00 до 24:00">ул. Тверская, 8</li>
+				<li data-text="г. Москва, ул. Тверская, 9" data-check="600 рублей" data-metro="Профсоюзная" data-time="с 9:00 до 24:00">ул. Тверская, 9</li>
+				<li data-text="г. Москва, ул. Тверская, 11" data-check="500 рублей" data-metro="Профсоюзная<br>Университет" data-time="с 9:00 до 24:00">ул. Тверская, 11</li>
 			</ul>
 			<p class="b-2-text"><a href="tel: +79000000000">8 (900) 000 00 00</a><br><span>г. Москва, ул. Вавилова, 64/1, стр. 1, Черёмушкинский рынок</span></p>
 			<ul class="info-list">
 				<li>
-					<p><img src="i/info-1.png">Средний чек:<br><span>800 рублей</span></p>
+					<p class="check-p"><img src="i/info-1.png">Средний чек:<br><span>800 рублей</span></p>
 				</li>
 				<li>
-					<p><img src="i/info-2.png">Станция метро:<br><span>Профсоюзная</span><br><span>Университет</span></p>
+					<p class="metro-p"><img src="i/info-2.png">Станция метро:<br><span>Профсоюзная<br>Университет</span></p>
 				</li>
 				<li>
-					<p><img src="i/info-3.png">Режим работы:<br><span>с 9:00 до 24:00</span></p>
+					<p class="time-p"><img src="i/info-3.png">Режим работы:<br><span>с 9:00 до 24:00</span></p>
 				</li>
 			</ul>
 			<ul class="image-list">
