--- a/lk.html
+++ b/lk.html
@@ -109,6 +109,10 @@
 					<input type="tel" value="+7 (900) 000-00-00">
 				</div>
 				<div class="input-wrap">
+					<p>E-mail</p>
+					<input type="text" value="mail@mail.ru">
+				</div>
+				<div class="input-wrap">
 					<p>Дата рождения</p>
 					<input type="text" value="Не указано">
 				</div>
@@ -317,6 +321,13 @@
 			<div class="popup-wine-text">
 				<div class="name">Выдержанное итальянское вино</div>
 				<p>Как же появилась пицца. Похожие блюда уже существовали у древних греков и римлян. Они представляли собой кушанья, выложенные на ломтях хлеба. Хлеб с добавками мяса, сыра, маслин, овощей, молочных изделий входил в пайки для римских легионеров. Это была пища, как патрициев, так и плебеев. Римлянин Марк Апиций в I веке до н.э. написал книгу, в которой приводились рецепты «прародителей» современной пиццы. На тесто в различных сочетаниях помещалось оливковое масло, сыр, куски мяса цыплят, мята, орехи, чеснок, перец. Само слово pizza близко к словам piazza (площадь) piatto (тарелка). В 1522 году в Европу завезли помидоры и в Италии начинают готовить практически классическую пиццу.</p>
+			</div>
+		</div>
+
+		<div class="popup popup-text" id="popup-text">
+			<div class="text">
+				<div class="name">Загловок</div>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer vitae tortor vel ligula gravida hendrerit non id tellus. Pellentesque a purus egestas, hendrerit massa ut, accumsan risus. Cras a eros et turpis ullamcorper consectetur sit amet eget ipsum. Nullam vel luctus sapien. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Mauris justo quam, semper nec nunc vitae, euismod tempor orci. Sed ac eleifend neque, quis blandit dui. Cras neque neque, ultricies et auctor at, commodo vitae tortor. Aenean tincidunt metus non turpis consectetur accumsan. Vivamus lacinia aliquam eros at bibendum. Sed rhoncus et diam ac tempus. Nam ut neque nulla.</p>
 			</div>
 		</div>
 	</div>
