--- a/pizzaria.html
+++ b/pizzaria.html
@@ -196,6 +196,132 @@
 	</div>
 
 	<div style="display:none;">
+		<div class="popup" id="popup-pizza">
+			<div class="popup-wrap">
+				<div class="image"><img src="i/pizza-big.png"></div>
+				<div class="text">
+					<div class="name">Пицца «4 сыра»</div>
+					<p>Ассорти из четырех видов сыра: Моцарелла, Чеддер, Дор-блю, Пармезан, орегано, базилик, соус.</p>
+					<ul class="popup-list">
+						<li><span><img src="i/i-b-3-i-1.png">Тонкое тесто</span></li>
+						<li><span><img src="i/i-b-3-i-2.png">Ручная работа</span></li>
+						<li><span><img src="i/i-b-3-i-3.png">Свежие ингредиенты</span></li>
+					</ul>
+					<div class="col">
+						<div class="less"></div>
+						<p>0</p>
+						<div class="more"></div>
+					</div>
+					<div class="price-wrap">
+						<div class="price"><span>544</span> Руб.</div>
+						<a href="#" class="add-btn">Добавить в корзину</a>
+					</div>
+				</div>
+			</div>
+			<div class="popup-dop">
+				<div class="name">Добавить ингредиенты:</div>
+				<p>Вы можете добавить не более <span>5 ингредиентов</span></p>
+				<ul class="dop-list">
+					<li>
+						<div class="image"><img src="i/dop-1.jpg"></div>
+						<div class="dop-name">Сыр Чеддер</div>
+						<div class="dop-info">50 грамм</div>
+						<div class="price-wrap">
+							<div class="price"><span>544</span> Руб.</div>
+							<a href="#" class="dop-add"></a>
+						</div>
+					</li>
+					<li>
+						<div class="image"><img src="i/dop-1.jpg"></div>
+						<div class="dop-name">Сыр Чеддер</div>
+						<div class="dop-info">50 грамм</div>
+						<div class="price-wrap">
+							<div class="price"><span>544</span> Руб.</div>
+							<a href="#" class="dop-add"></a>
+						</div>
+					</li>
+					<li>
+						<div class="image"><img src="i/dop-2.jpg"></div>
+						<div class="dop-name">Свежий базилик</div>
+						<div class="dop-info">10 грамм</div>
+						<div class="price-wrap">
+							<div class="price"><span>544</span> Руб.</div>
+							<a href="#" class="dop-add"></a>
+						</div>
+					</li>
+					<li>
+						<div class="image"><img src="i/dop-1.jpg"></div>
+						<div class="dop-name">Сыр Чеддер</div>
+						<div class="dop-info">50 грамм</div>
+						<div class="price-wrap">
+							<div class="price"><span>544</span> Руб.</div>
+							<a href="#" class="dop-add"></a>
+						</div>
+					</li>
+					<li>
+						<div class="image"><img src="i/dop-3.jpg"></div>
+						<div class="dop-name">Томаты Черри</div>
+						<div class="dop-info">50 грамм</div>
+						<div class="price-wrap">
+							<div class="price"><span>544</span> Руб.</div>
+							<a href="#" class="dop-add"></a>
+						</div>
+					</li>
+				</ul>
+			</div>
+		</div>
+
+		<div class="popup" id="popup-soup">
+			<div class="popup-wrap">
+				<div class="image"><img src="i/soup.jpg"></div>
+				<div class="text">
+					<div class="name">Суп пюре с белыми грибами</div>
+					<p>Сливки, картофель, белые грибы, зелень, сливочное масло, специи.</p>
+					<ul class="popup-list">
+						<li><span><img src="i/i-b-3-i-4.png">Насыщенный бульон</span></li>
+						<li><span><img src="i/i-b-3-i-4.png">Отборные ингредиенты</span></li>
+						<li><span><img src="i/i-b-3-i-4.png">Без полуфабрикатов</span></li>
+					</ul>
+					<div class="col">
+						<div class="less"></div>
+						<p>0</p>
+						<div class="more"></div>
+					</div>
+					<div class="price-wrap">
+						<div class="price"><span>544</span> Руб.</div>
+						<a href="#" class="add-btn">Добавить в корзину</a>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<div class="popup" id="popup-wine">
+			<div class="popup-wrap">
+				<div class="image"><img src="i/wine.jpg"></div>
+				<div class="text">
+					<div class="name">Black Label</div>
+					<p>Каберне-савиньон, красное, полусладкое, 11об.</p>
+					<ul class="popup-list">
+						<li><span><img src="i/i-b-3-i-7.png">Год:<br><b>1998</b></span></li>
+						<li><span><img src="i/i-b-3-i-8.png">Страна:<br><b>Италия</b></span></li>
+						<li><span><img src="i/i-b-3-i-9.png">Вид:<br><b>Красное</b></span></li>
+					</ul>
+					<div class="popup-price-wine"><span>544 Руб.</span> / бокал (0.2 л.)</div>
+					<div class="popup-price-wine"><span>1970 Руб.</span> / бутылка (0.75 л.)</div>
+				</div>
+			</div>
+			<div class="popup-wine-text">
+				<div class="name">Выдержанное итальянское вино</div>
+				<p>Как же появилась пицца. Похожие блюда уже существовали у древних греков и римлян. Они представляли собой кушанья, выложенные на ломтях хлеба. Хлеб с добавками мяса, сыра, маслин, овощей, молочных изделий входил в пайки для римских легионеров. Это была пища, как патрициев, так и плебеев. Римлянин Марк Апиций в I веке до н.э. написал книгу, в которой приводились рецепты «прародителей» современной пиццы. На тесто в различных сочетаниях помещалось оливковое масло, сыр, куски мяса цыплят, мята, орехи, чеснок, перец. Само слово pizza близко к словам piazza (площадь) piatto (тарелка). В 1522 году в Европу завезли помидоры и в Италии начинают готовить практически классическую пиццу.</p>
+			</div>
+		</div>
+
+		<div class="popup popup-text" id="popup-text">
+			<div class="text">
+				<div class="name">Загловок</div>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer vitae tortor vel ligula gravida hendrerit non id tellus. Pellentesque a purus egestas, hendrerit massa ut, accumsan risus. Cras a eros et turpis ullamcorper consectetur sit amet eget ipsum. Nullam vel luctus sapien. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Mauris justo quam, semper nec nunc vitae, euismod tempor orci. Sed ac eleifend neque, quis blandit dui. Cras neque neque, ultricies et auctor at, commodo vitae tortor. Aenean tincidunt metus non turpis consectetur accumsan. Vivamus lacinia aliquam eros at bibendum. Sed rhoncus et diam ac tempus. Nam ut neque nulla.</p>
+			</div>
+		</div>
 	</div>
 </body>
 </html>
