--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 		</div>
 	</div>
 
-	<div class="b-3">
+	<div class="b b-3">
 		<div class="b-block" id="pizza">
 			<h2>Пицца</h2>
 			<ul class="b-3-list">
@@ -749,7 +749,7 @@
 						<div class="dop-info">50 грамм</div>
 						<div class="price-wrap">
 							<div class="price"><span>10</span> Руб.</div>
-							<a href="#" class="dop-add"></a>
+							<a href="#" class="dop-add" data-dob="_d1"></a>
 						</div>
 					</li>
 					<li id="dob-02">
@@ -758,7 +758,7 @@
 						<div class="dop-info">50 грамм</div>
 						<div class="price-wrap">
 							<div class="price"><span>20</span> Руб.</div>
-							<a href="#" class="dop-add"></a>
+							<a href="#" class="dop-add" data-dob="_d2"></a>
 						</div>
 					</li>
 					<li id="dob-03">
@@ -767,7 +767,7 @@
 						<div class="dop-info">10 грамм</div>
 						<div class="price-wrap">
 							<div class="price"><span>30</span> Руб.</div>
-							<a href="#" class="dop-add"></a>
+							<a href="#" class="dop-add" data-dob="_d3"></a>
 						</div>
 					</li>
 					<li id="dob-04">
@@ -776,7 +776,7 @@
 						<div class="dop-info">50 грамм</div>
 						<div class="price-wrap">
 							<div class="price"><span>40</span> Руб.</div>
-							<a href="#" class="dop-add"></a>
+							<a href="#" class="dop-add" data-dob="_d4"></a>
 						</div>
 					</li>
 					<li id="dob-05">
@@ -785,7 +785,7 @@
 						<div class="dop-info">50 грамм</div>
 						<div class="price-wrap">
 							<div class="price"><span>50</span> Руб.</div>
-							<a href="#" class="dop-add"></a>
+							<a href="#" class="dop-add" data-dob="_d5"></a>
 						</div>
 					</li>
 				</ul>
